Lagt til WAKE_LOCK permission

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-permission android:name="android.permission.WAKE_LOCK"/>
+        
 
     </application>
 </manifest>
