--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -6,13 +6,17 @@
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Arkanoid"
-                  android:label="@string/app_name">
-            <intent-filter>
+        <activity android:name=".Arkanoid"></activity>
+        <activity android:name=".SplashScreen"
+        		  android:label="@string/app_name">
+        	<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Menu" android:label="@string/app_name"></activity>
+        <activity android:name=".Credits"></activity>
+		<activity android:name=".HighscoresView"></activity>
         <uses-permission android:name="android.permission.WAKE_LOCK"/>
         
 
