--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -3,10 +3,7 @@
       package="com.arkanoid"
       android:versionCode="1"
       android:versionName="1.0">
-
-
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Arkanoid"></activity>
         <activity android:name=".SplashScreen"
         		  android:label="@string/app_name">
         	<intent-filter>
@@ -14,11 +11,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Arkanoid"></activity>
         <activity android:name=".Menu" android:label="@string/app_name"></activity>
         <activity android:name=".Credits"></activity>
 		<activity android:name=".HighscoresView"></activity>
+		<activity android:name=".EnterName"></activity>
         <uses-permission android:name="android.permission.WAKE_LOCK"/>
-        
-
     </application>
 </manifest>
